<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorOnPrimary"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:fontFamily="monospace"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/dislikes_in_youtube"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/banner_1"
            android:importantForAccessibility="no">

        </ImageView>


    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/main_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="12dp"
        app:cardBackgroundColor="@color/colorOnPrimary"
        app:cardCornerRadius="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/url_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@drawable/round_corners"
                android:gravity="top"
                android:hint="@string/youtube_video_link_paste"
                android:importantForAutofill="no"
                android:lines="2"
                android:padding="10dp"
                android:text=""
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TextFields,TextContrastCheck,VisualLintTextFieldSize" />

            <LinearLayout
                android:id="@+id/home_btn_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/url_box">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/paste_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_margin="16dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/round_corners_btn"
                    android:backgroundTint="@color/Accent"
                    android:fontFamily="sans-serif-black"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:gravity="center"
                    android:text="@string/paste"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    tools:ignore="VisualLintButtonSize" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/view_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_margin="16dp"
                    android:layout_marginStart="8dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/round_corners_btn"
                    android:backgroundTint="@color/Accent"
                    android:fontFamily="sans-serif-black"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:gravity="center"
                    android:text="@string/view"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    tools:ignore="TextSizeCheck,VisualLintButtonSize" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:backgroundTint="@color/colorOnPrimary"
        android:text="@string/open_youtube"
        android:textSize="20sp"
        app:icon="@drawable/video_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_card" />

    <Button
        android:id="@+id/button_ex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:backgroundTint="@color/colorOnPrimary"
        android:text="@string/extension"
        android:textSize="20sp"
        app:icon="@drawable/baseline_extension_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:adSize="BANNER"
        app:adUnitId="@string/Banner_Ads_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
    </com.google.android.gms.ads.AdView>


</androidx.constraintlayout.widget.ConstraintLayout>